SERVER-84738 Fix Data Race in ReshardingCollectionCloner

GitOrigin-RevId: 3c0ca3e82de5364d031d1bdd9b9c52be0e1f3743